<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.monportfolio.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.monportfolio.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.monportfolio.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_competences"
        android:name="com.example.monportfolio.ui.competence.CompetenceFragment"
        android:label="@string/menu_competence"
        tools:layout="@layout/fragment_competences" />
    <fragment
        android:id="@+id/nav_formations"
        android:name="com.example.monportfolio.ui.formations.FormationFragment"
        android:label="@string/menu_formations"
        tools:layout="@layout/fragment_formations" />
    <fragment
        android:id="@+id/nav_realisations"
        android:name="com.example.monportfolio.ui.realisation.RealisationFragment"
        android:label="@string/menu_Realisations"
        tools:layout="@layout/fragment_realisations" />

</navigation>